many alignment issues fixed in place-detail

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -421,7 +421,8 @@ input [type="range"] {
 }
 
 .top-search-box {
-  width: 30rem;
+  width: 100%;
+  max-width: 30rem;
   height: 3.25rem;
 }
 
